--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="flex view">
                 <i class="fas fa-expand-arrows-alt"></i>
             </div>
-
+        
         </div>
     </header>
 <!--fine header-->
@@ -31,6 +31,40 @@
 <!--main-->
 
     <main>
+        <div class="flex-1 conteiner-2">
+
+            <div class=" flex-1 item">
+                <div class=" flex-1 pinco">
+                    <i class="fas fa-microphone-slash"></i>
+                    <p id="p">Pinco Pallo</p>
+                </div>
+            </div>
+            <div class=" flex-1 item">
+                <div class=" flex-1 pinco">
+                    <i class="fas fa-microphone-slash"></i>
+                    <p id="p">Pinco Pallo</p>
+                </div>
+            </div>
+            <div class=" flex-1 item">
+                <div class=" flex-1 pinco">
+                    <i class="fas fa-microphone-slash"></i>
+                    <p id="p">Pinco Pallo</p>
+                </div>
+            </div>
+            <div class=" flex-1 item">
+                <div class=" flex-1 pinco">
+                    <i class="fas fa-microphone-slash"></i>
+                    <p id="p">Pinco Pallo</p>
+                </div>
+            </div>
+            <div class=" flex-1 item">
+                <div class=" flex-1 pinco">
+                    <i class="fas fa-microphone-slash"></i>
+                    <p id="p">Pinco Pallo</p>
+                </div>
+            </div>
+
+        </div>
 
     </main>
 
