--- a/index.html
+++ b/index.html
@@ -63,6 +63,72 @@
                     <p id="p">Pinco Pallo</p>
                 </div>
             </div>
+            <div class=" flex-1 item">
+                <div class=" flex-1 pinco">
+                    <i class="fas fa-microphone-slash"></i>
+                    <p id="p">Pinco Pallo</p>
+                </div>
+            </div>
+            <div class=" flex-1 item">
+                <div class=" flex-1 pinco">
+                    <i class="fas fa-microphone-slash"></i>
+                    <p id="p">Pinco Pallo</p>
+                </div>
+            </div>
+            <div class=" flex-1 item">
+                <div class=" flex-1 pinco">
+                    <i class="fas fa-microphone-slash"></i>
+                    <p id="p">Pinco Pallo</p>
+                </div>
+            </div>
+            <div class=" flex-1 item">
+                <div class=" flex-1 pinco">
+                    <i class="fas fa-microphone-slash"></i>
+                    <p id="p">Pinco Pallo</p>
+                </div>
+            </div>
+            <div class=" flex-1 item">
+                <div class=" flex-1 pinco">
+                    <i class="fas fa-microphone-slash"></i>
+                    <p id="p">Pinco Pallo</p>
+                </div>
+            </div>
+            <div class=" flex-1 item">
+                <div class=" flex-1 pinco">
+                    <i class="fas fa-microphone-slash"></i>
+                    <p id="p">Pinco Pallo</p>
+                </div>
+            </div>
+            <div class=" flex-1 item">
+                <div class=" flex-1 pinco">
+                    <i class="fas fa-microphone-slash"></i>
+                    <p id="p">Pinco Pallo</p>
+                </div>
+            </div>
+            <div class=" flex-1 item">
+                <div class=" flex-1 pinco">
+                    <i class="fas fa-microphone-slash"></i>
+                    <p id="p">Pinco Pallo</p>
+                </div>
+            </div>
+            <div class=" flex-1 item">
+                <div class=" flex-1 pinco">
+                    <i class="fas fa-microphone-slash"></i>
+                    <p id="p">Pinco Pallo</p>
+                </div>
+            </div>
+            <div class=" flex-1 item">
+                <div class=" flex-1 pinco">
+                    <i class="fas fa-microphone-slash"></i>
+                    <p id="p">Pinco Pallo</p>
+                </div>
+            </div>
+            <div class=" flex-1 item">
+                <div class=" flex-1 pinco">
+                    <i class="fas fa-microphone-slash"></i>
+                    <p id="p">Pinco Pallo</p>
+                </div>
+            </div>
 
         </div>
 
