--- a/index.html
+++ b/index.html
@@ -133,6 +133,15 @@
         </div>
 
     </main>
+<!--fine main-->
+
+<!--footer-->
+
+    <footer>
+        <div class="conteiner-3">
+            <div></div>
+        </div>
+    </footer>
 
 </body>
 </html>
