--- a/index.html
+++ b/index.html
@@ -139,7 +139,67 @@
 
     <footer>
         <div class="conteiner-3">
-            <div></div>
+
+            <div class="nav-flex left">
+
+                <div class=" nav-flex flex-column box">
+                    <i class="fas fa-microphone"></i>
+                    <p>Mute</p>
+                </div>
+                <div class=" nav-flex flex-column box">
+                    <i class="fas fa-chevron-up"></i>
+                </div>
+                <div class=" nav-flex flex-column box">
+                    <i class="fas fa-video"></i>
+                    <p>Stop Video</p>
+                </div>
+                <div class=" nav-flex flex-column box">
+                    <i class="fas fa-chevron-up"></i>
+                </div>
+            </div>
+
+            <div class="nav-flex center">
+
+                <div class=" nav-flex flex-column box">
+                    <i class="fas fa-microphone"></i>
+                    <p>Mute</p>
+                </div>
+                <div class=" nav-flex flex-column box">
+                    <i class="fas fa-chevron-up"></i>
+                </div>
+                <div class=" nav-flex flex-column box">
+                    <i class="fas fa-video"></i>
+                    <p>Stop Video</p>
+                </div>
+                <div class=" nav-flex flex-column box">
+                    <i class="fas fa-chevron-up"></i>
+                </div>
+                <div class=" nav-flex flex-column box">
+                    <i class="fas fa-microphone"></i>
+                    <p>Mute</p>
+                </div>
+                <div class=" nav-flex flex-column box">
+                    <i class="fas fa-chevron-up"></i>
+                </div>
+                <div class=" nav-flex flex-column box">
+                    <i class="fas fa-video"></i>
+                    <p>Stop Video</p>
+                </div>
+                <div class=" nav-flex flex-column box">
+                    <i class="fas fa-chevron-up"></i>
+                </div>
+                <div class=" nav-flex flex-column box">
+                    <i class="fas fa-video"></i>
+                    <p>Stop Video</p>
+                </div>
+            </div>
+
+            <div class="nav-flex rigth">
+                <div class=" nav-flex box">
+                    <p id="p3">End Meeting</p>
+                </div>
+
+            </div>
         </div>
     </footer>
 
