--- a/index.html
+++ b/index.html
@@ -143,58 +143,61 @@
             <div class="nav-flex left">
 
                 <div class=" nav-flex flex-column box">
-                    <i class="fas fa-microphone"></i>
+                    <i class=" i fas fa-microphone"></i>
                     <p>Mute</p>
                 </div>
                 <div class=" nav-flex flex-column box">
-                    <i class="fas fa-chevron-up"></i>
+                    <i class=" up fas fa-chevron-up"></i>
                 </div>
                 <div class=" nav-flex flex-column box">
-                    <i class="fas fa-video"></i>
+                    <i class=" i fas fa-video"></i>
                     <p>Stop Video</p>
                 </div>
                 <div class=" nav-flex flex-column box">
-                    <i class="fas fa-chevron-up"></i>
+                    <i class=" up fas fa-chevron-up"></i>
                 </div>
             </div>
 
             <div class="nav-flex center">
 
                 <div class=" nav-flex flex-column box">
-                    <i class="fas fa-microphone"></i>
-                    <p>Mute</p>
+                    <i class="i fas fa-user-plus"></i>
+                    <p>Invite</p>
                 </div>
                 <div class=" nav-flex flex-column box">
-                    <i class="fas fa-chevron-up"></i>
+                    <i class="i fas fa-user-friends"></i>
+                    <p>Manage Participants</p>
                 </div>
                 <div class=" nav-flex flex-column box">
-                    <i class="fas fa-video"></i>
-                    <p>Stop Video</p>
+                    <i class="i fas fa-chart-bar"></i>
+                    <p>Polling</p>
                 </div>
                 <div class=" nav-flex flex-column box">
-                    <i class="fas fa-chevron-up"></i>
+                    <i class="green fas fa-share-square"></i>
+                    <p>Share Screen</p>
                 </div>
                 <div class=" nav-flex flex-column box">
-                    <i class="fas fa-microphone"></i>
-                    <p>Mute</p>
+                    <i class=" up fas fa-chevron-up"></i>
                 </div>
                 <div class=" nav-flex flex-column box">
-                    <i class="fas fa-chevron-up"></i>
+                    <i class="i fas fa-comment"></i>
+                    <p>Chat</p>
                 </div>
                 <div class=" nav-flex flex-column box">
-                    <i class="fas fa-video"></i>
-                    <p>Stop Video</p>
+                    <i class="i fas fa-stop-circle"></i>
+                    <p>Record</p>
                 </div>
                 <div class=" nav-flex flex-column box">
-                    <i class="fas fa-chevron-up"></i>
+                    <i class="i fas fa-th-large"></i>
+                    <p>Breakout Room</p>
                 </div>
                 <div class=" nav-flex flex-column box">
-                    <i class="fas fa-video"></i>
-                    <p>Stop Video</p>
+                    <i class="i fas fa-ellipsis-h"></i>
+                    <p>More</p>
                 </div>
             </div>
 
-            <div class="nav-flex rigth">
+            <div class="nav-flex right">
                 <div class=" nav-flex box">
                     <p id="p3">End Meeting</p>
                 </div>
